--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -49,15 +49,15 @@ require you to keep using your mouse
 
 TravEzy is perfect for:
 
-. Managing your busy calendar and finding the optimal period (_after your finals_) to take that much needed holiday!
+. Managing your busy calendar and finding the optimal period [.line-through]#during exams# after your finals to take that much needed holiday!
 
-. Creating the ideal itinerary for your 3 day shopping trip to Bangkok :)
+. Creating the ideal itinerary for your shopping trip to Bangkok :)
 
 . Tracking your expenses during your trip, so that you have enough money left for the trip home
 
-. Journaling in your travel diary and effortlessly looking at old entries to recall your exchange trip to Sweden.
+. Writing about your amazing snorkeling trip to Tioman in your travel diary
 
-. Calling old and new friends from your address book
+. Looking up the details of the your new friend in your address book
 
 What are you waiting for? Hop on to this user guide and we will
 travel to +++<u>+++Section 2, “Quick Start”+++</u>+++ to start TravEzy 😊
@@ -98,7 +98,7 @@ Excited to start using _TravEzy_? Read this section to find out how this documen
 
 === Structure of this Document
 
-Nobody likes to read long documents, especially when you have something as exciting as TravEzy to use. So, we have organised this document such that you can easily look for what *you* need. 
+There are *alot* of things that TravEzy can do. So, we have organised this document such that you can easily look for what *you* need.
 
 We've split up this guide into the different features of our application, namely:
 
@@ -110,7 +110,8 @@ We've split up this guide into the different features of our application, namely
 . Achievements
 
 
-In each of the above sections, you will be introduced to the *interface* of the feature, the *_parameters_* (which are just like those fields you fill up in a regular form📝) and the *commands* that will do the menial tasks for you.
+In each of the above sections, you will be introduced to the *interface* of the feature (how TravEzy looks), the *_parameters_* (which are just like those fields you
+fill up in a regular form📝) and the *commands* that will allow you to start *travelling easy*.
 
 
 === Reading this Document
@@ -123,10 +124,10 @@ Symbols and fanciful (okay, different) fonts are exciting, aren't they? Let's fi
 | Symbol/font | What does it mean?
 
 | _italics_
-| An italicised text indicates that the text has a definition that is (rather) specific to the application. Do look out for the definitions of these words along the way. If not, please look at the glossary in section 13).
+| Italicised text indicates that the text has a definition that is specific to the application. Do look out for the definitions of these words along the way. If not, please look at the glossary in section 13).
  
 | ``command``
-| A grey highlight means that you can type the words into _TravEzy_ and it will start performing tasks for you
+| A grey highlight means that you can type the words into _TravEzy_ and it will start performing tasks to make travel easier for you
 
 | ``MONTH``
 | Uppercase letters that are highlighted in grey indicate that the word is a _parameter_.footnote:[Remember what this means? A parameter is merely like a field in your regular form. Just replace it and fill it up with anything appropriate. 😊]
@@ -138,10 +139,10 @@ Symbols and fanciful (okay, different) fonts are exciting, aren't they? Let's fi
 | Square brackets imply that the the stated _prefix_ and _parameter_ are optional. (This means less typing! 😆)
 
 | 💡  
-| A light bulb indicates that what is to follow is a tip. 
+| A light bulb indicates that the enclosed text is a tip.
 
 | ⚠️  
-| A warning sign indicates that what is to follow is important.
+| A warning sign indicates that enclosed text is important.
  
 |===
 
@@ -156,7 +157,7 @@ financial tracker, achievements etc. You can also the exit the application from 
 Don't worry! You can also navigate to other pages
 and exit when you are already inside in a page such as itinerary.
 
-=== Go To Command
+=== Navigating our application with
 
 Trying to open up the achievements page? Use the *Go To Command*:
 
@@ -782,6 +783,7 @@ Examples:
 === Listing all persons : `list`
 
 Shows a list of all persons in the address book. +
+Shows a list of all persons in the address book. +
 Format: `list`
 
 === Editing a person : `edit`
@@ -1120,65 +1122,43 @@ image::/images/FinancialTrackerSummary3.png[]
 The sweetest part of any holiday is looking back at your fond memories. TravEzy's
 Diary allows you to do just that!
 
-Each entry in your diary has 4 key sections:
+In TravEzy, we have broken down your memories into 4 key parts, namely _Title_, _Date and Time_, _Place_ and _Memory_.
 
-. Title
-. Date
-. Place
-. Memory
+For example, here is a Diary Entry about our trip to Tioman
 
-The title is the name of your entry, followed by the date of your memory, the place and finally
-a short description of the memory you want to keep. In the Diary, you will be able to add, delete,
-list and show your entries. There are also a few more special tasks that you can do with your diary.
+. _Title_ -> First time Snorkeling
+. _Date and Time_  -> 30/12/2019 0900
+. _Place_ -> Tioman Island
+. _Memory_ -> Saw so may beautiful fish!
+
+In the Diary, you will be able to add, delete, list and show your entries. There are also a few more special tasks that you can do with your diary.
 Enjoy!
 
 
-=== Parameters
+=== Adding diary entries to your diary ``add``
 
-Let's shed some light on the parameters and how exactly you can type them in to begin creating
-your diary entries:
+Trying to journal about your trip to DisneyLand? The Diary allows you to add entries and keep them alive in your desktop forever.
 
-. *Title* -> *COMPULSORY* Each diary entry must have a title. This title can be anything! The corresponding _PREFIX_ is ``t/``. For example:
-
-    t/My Birthday
-
-. *Date* -> *COMPULSORY* Each diary entry must have a date and time. The _PREFIX_ is `d/`. There is one way to input your date and time, but don't worry! It's really simple. You will have to enter it in this format:   `dd/MM/yyyy HHmm`. Let's say your birthday was celebrated on 27th January, 1997 at 11.59PM. Then, you would input:
-
-            d/ 27/01/1997 2359
+Format: `add t/TITLE d/DATE TIME [p/PLACE] [m/MEMORY]`
 
 
+| 💡
+| Note that ``PLACE`` and ``MEMORY`` are optional
+|
 
-. *Place*  -> *OPTIONAL*. Now, you may not remember each and every place that you did
-something memorable, but if you do, you can add it into your entry with the _PREFIX_ ``p/``:
 
-    p/Sweet Home Alabama
-
-. *Memory*  -> *OPTIONAL*. Not all memories can be expressed in words. If you can, just add a short note of your memory using the _PREFIX_ ``m/``:
-
-    m/Rode a bike for the first time
+| ⚠️
+| A warning sign indicates that enclosed text is important.
 
 
 
 
 
-=== Add Command
+Example: Lets take the example of our midnight fishing trip! I can't really remember where it was...
 
-Trying to journal your trip to DisneyLand?
-*Add an entry to your diary: ``add``*
+Enter``add t/Fishing Trip d/12/12/2019 2300 m/Caught the biggest fish ever!``
+image::DiaryAddNoPlaceBefore.png[TravEzy Logo]
 
-Adds an entry to your diary, with the parameters: title (of the diary entry), date
-(of the event you are trying to journal) , place (of the event) and memory (more info
-about the event).
-
-The _Command Word_ is ``add`` and the prefixes are ``t/`` for title, ``d/``
-for date, ``p/`` for place and ``m/`` for memory.
-Only title and date are compulsory.
-
-Format: ``add t/title d/date [p/place] [m/memory]``
-
-Example: Lets take the example of my fishing trip! I can't really remember where it was...
-
-``add t/Fishing Trip d/12/12/2019 m/Caught the biggest fish ever!``
 
 
 
