--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -779,6 +779,8 @@ image::afterhelp.png[width="450"]
 
 A pop up box will appear, with a link to the user guide on Athletick.
 
+//tag::undoredo[]
+
 ==== Undoing a previous command : `undo`
 
 This command restores Athletick to the state before the previous command was executed.
@@ -868,6 +870,8 @@ The result box will display a success message.
 Furthermore, the list now only has 7 people and Mohamad Ali is once again gone from the list!
 
 image::AfterRedo0.png[width="450"]
+
+//end::undoredo[]
 
 === Upcoming features
 
