Update calendar opendisplay portion of the user guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -223,42 +223,42 @@ image::undo-result.png[width="450", float="left"]
 image::redo-result.png[width="450"]
 --
 
-=== Changing to calendar view : `tab calendar`
+=== Changing to calendar view : `tab b/calendar`
 Changes the current view to the calendar view which displays daily engagement information.
 More commands are provided for interaction with the calendar window.
 
-Format: `tab calendar`
+Format: `tab b/calendar`
 
 .Calendar view for November 2019
 image::calendar-view.png[width="450"]
 
-=== Displaying the list of engagements for a specified date (calendar view only): `calendar opendisplay`
+=== Displaying the list of engagements for a specified date (calendar view only): `calendar c/opendisplay`
 Opens a separate window displaying the list of engagements for the specified date. Only one such window is allowed per date.
-This means that nothing will happen if this command is used with a date which already has an open engagements list window.
+Nothing will happen if this command is used with a date which already has an open engagements list window.
 
-Format: `calendar opendisplay [date]`. The date must follow a DD/MM/YYYY format.
+Format: `calendar c/opendisplay d/[date]`. The date must follow a DD/MM/YYYY format. The range of allowable years is 0001 to 9999.
 
-If this command is used to open an engagement list window using a date from another month, the calendar's view will switch to
+If a date from another month is used to open an engagement list window, the calendar view will switch to
 display that specified month. This command can be used to quickly switch to another month which is not immediately before or
 after the currently displayed month.
 
 All engagement list windows will be closed if something is done to change the displayed calendar month
-(e.g. using the `calendar nextmonth` command). This includes using this command as in the above paragraph.
+(e.g. using the `calendar c/nextmonth` command). This includes using this command as mentioned in the above paragraph.
 
-Example: The calendar is currently displaying information for October 2019 and there are engagement list windows open for three dates
-in the display. If `calendar opendisplay 11/11/2019` is entered into the input box, then all three engagement list windows will be closed.
-The calendar's display then switches to November 2019 and the engagement list window for 11 November 2019 is opened up.
+Example: The calendar is currently displaying information for November 2019 and there are engagement list windows open for three dates
+in the display. If `calendar c/opendisplay d/11/12/2019` is entered into the input box, all three engagement list windows will be closed.
+The calendar's display then switches to December 2019 and the engagement list window for 11 December 2019 opens up.
 
-This command does not work if the application is in another tab (view) or the specified date is invalid.
+This command does not work if the application is in another tab or the specified date is invalid.
 
 .Engagement list for 01/11/2019
 image::calendar-open-display.png[width="450"]
 {empty} +
-After entering `calendar opendisplay 01/11/2019` into the input box while in calendar view for October 2019, the
-above window opens up. The date 01/11/2019 is still valid because it is displayed in the calendar view for October
-2019, albeit at the end of the grid.
+The above calendar window opens up after entering `calendar c/opendisplay d/29/10/2019` into the input box while in the
+calendar view for November 2019. This does not change the display to October 2019 because 29/10/2019 is displayed in
+the calendar view for November 2019, albeit at the top left corner.
 
-Alternatively, you may click on any of the individual cells within the calendar window to open the engagement list
+Alternatively, you may click on any of the individual cells within the calendar window grid to open the engagement list
 for that date.
 
 === Changing the calendar display to the next month (calendar view only): `calendar nextmonth`
